--- a/src/app/admin/view-all-employers/view-all-employers.component.html
+++ b/src/app/admin/view-all-employers/view-all-employers.component.html
@@ -25,13 +25,13 @@
     </ng-container>
 
       <ng-container matColumnDef="password">
-          <th mat-header-cell *matHeaderCellDef> Password </th>
-          <td mat-cell *matCellDef="let element"> <button mat-button (click)="delete()">Delete</button>
+          <th mat-header-cell *matHeaderCellDef> Actions </th>
+          <td mat-cell *matCellDef="let element"> <button mat-button (click)="deleteEmployerById(element.empId)" color="warn">Delete</button>
           </td>
         </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+    <!-- <tr mat-row *matRowDef="let row; columns: displayedColumns;"
         (click)="selection.toggle(row)">
-    </tr>
+    </tr> -->
   </table>
    
