--- a/src/app/admin/view-all-jobs/view-all-jobs.component.html
+++ b/src/app/admin/view-all-jobs/view-all-jobs.component.html
@@ -19,7 +19,7 @@
 
     <mat-card>
       
-      <mat-card-title>Company : {{x.jobProfile}} <div class="button"> <button mat-raised-button color="warn" (click)="applyForJob(x.jobId)">Apply</button> </div> </mat-card-title>
+      <mat-card-title>Company : {{x.jobProfile}} <div class="button"> <button mat-raised-button color="warn" (click)="deleteJob(x.jobId)">Apply</button> </div> </mat-card-title>
       <mat-card-content> <i>Role: {{x.companyName}}</i>
         
 
